<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jubaoppw"
    android:gravity="center_vertical"

    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/COLLECT_PPDEILTE"
    android:textColor="#000000"
    android:gravity="center"
    android:textSize="23dp"
    />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="#50000000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/COLLECT_PPQUEDING"
            android:textSize="25dp"
            android:gravity="center_vertical|center"
            android:layout_weight="1"
            android:clickable="true"
            android:textColor="#000000"
            android:id="@+id/collect_queding"
            />
        <ImageView
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:src="#50000000"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/JUBAPPP_CANCEL"
            android:textSize="25dp"
            android:gravity="center_vertical|center"
            android:layout_weight="1"
            android:clickable="true"
            android:textColor="#000000"
            android:id="@+id/collect_quxiao"
            />
    </LinearLayout>
</LinearLayout>