<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/jubaoppw"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/JUBAOPP_TITER"
            android:gravity="left|center"
            android:textSize="14dp"
            android:textColor="#757575"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/JUBAOPP_ZHILIANG"
                android:textSize="14dp"
                android:textColor="#000000"
                android:gravity="fill_vertical"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/select"
                android:layout_gravity="right|center"
                android:id="@+id/jupopuw_zhiliang"
                android:clickable="true"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/JUBAOPP_TAIDU"
                android:textSize="14dp"
                android:textColor="#000000"
                android:gravity="fill_vertical"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/select"
                android:layout_gravity="right|center"
                android:id="@+id/jupopuw_taidu"
                android:clickable="true"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/JUBAOPP_GUANGGAO"
                android:textSize="14dp"
                android:textColor="#000000"
                android:gravity="fill_vertical"
                android:layout_weight="1"
                android:id="@+id/textView" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/select"
                android:layout_gravity="right|center"
                android:id="@+id/jupopuw_guanggao"
                android:clickable="true"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/JUBAOPP_OTHER"
                android:textSize="14dp"
                android:textColor="#000000"
                android:gravity="fill_vertical"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/select"
                android:layout_gravity="right|center"
                android:id="@+id/jupopuw_other"
                android:clickable="true"
                />
        </LinearLayout>
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#757575"
            android:textColor="#000000"
            android:hint="@string/JUBAOPP_EDITEXT"
            android:gravity="top|left"
            android:visibility="gone"
            android:textSize="13dp"
            android:id="@+id/jupopuw_edittext"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#ffffff"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/JUBAPPP_CANCEL"
            android:textSize="21dp"
            android:textColor="#3F9F00"
            android:gravity="center_vertical|center"
            android:layout_weight="1"
            android:id="@+id/jupopuw_cancel"
            />
        <ImageView
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="#000000"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/JUBAOPP_CONFIRM"
            android:textSize="21dp"
            android:textColor="#3F9F00"
            android:gravity="center_vertical|center"
            android:layout_weight="1"
            android:id="@+id/jupopuw_confirm"
        />
    </LinearLayout>
</LinearLayout>