<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detailsay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xiangqingmodule.DetailsActivity"
    android:orientation="vertical"
    android:background="#ffffff"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ff50c577"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/back_icon"
            android:id="@+id/details_back_btn"
            android:layout_gravity="center"
            android:background="#00ffffff"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:onClick="detailsclik"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEATAILS_TITER"
            android:id="@+id/details_title_text"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/fenxiang"
            android:layout_gravity="center"
            android:id="@+id/details_fengxiang"
            android:clickable="true"
            android:onClick="detailsclik"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/love_icon2"
            android:id="@+id/details_collect"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="detailsclik"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none"
        >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >
            <android.support.v4.view.ViewPager
                android:id="@+id/details_shop_image"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DETAILS_SHOP_NAME"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_marginTop="14dp"
                android:id="@+id/details_shop_name"
                android:layout_marginLeft="5dp"
                />
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:text="@string/DETAILS_AVERAGE"
                android:textColor="#407F7F7F"
                android:id="@+id/details_average"
                android:textSize="15dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:textSize="13dp"
                android:text="@string/DETAILS_TIME"
                android:textColor="#607F7F7F"
                android:id="@+id/details_time"
                />
        </LinearLayout>
            <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:src="#407F7F7F"

            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:id="@+id/details_address"
                android:text="@string/DETAILS_ADDRESS"
                android:textColor="#000000"
                android:gravity="fill_vertical"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#607F7F7F"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:id="@+id/details_contacts"
                android:text="@string/DETAILS_CONTACTS"
                android:textColor="#000000"
                android:gravity="fill_vertical"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#607F7F7F"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:id="@+id/details_phone_number"
                android:text="@string/DETAILS_PHONE_NUMBER"
                android:textColor="#000000"
                android:gravity="fill_vertical"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#607F7F7F"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/DEATAILS_TITER"
                android:gravity="fill_vertical"
                android:textSize="15sp"
                android:background="#207F7F7F"
                android:textColor="#757F7F7F"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/details_shop_content"
                android:text="@string/DETAILS_SHOP_CONTENT"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="#607F7F7F"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#207F7F7F"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/details_phone"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:onClick="detailsclik"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:src="@drawable/phone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="@string/DETAILS_PHOME"
                android:textSize="20dp"
                android:textColor="#3F9F00"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:src="#607F7F7F"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/details_jubao"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:onClick="detailsclik"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:src="@drawable/jubao"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="@string/DETAILS_JUBAO"
                android:textColor="#3F9F00"
                android:textSize="20dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
